--- a/styles/style.css
+++ b/styles/style.css
@@ -177,3 +177,74 @@ header {
 }
   
 /* Write your CSS below */
+
+@media (max-width: 760px) {
+  .navbar {
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+  }
+
+  .navbar li {
+    border-right: 0;
+    border-top: solid 1px white;
+    width: 100%;
+  }
+
+  main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .articles-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+.article {
+  align-items: start;
+  justify-content: space-between;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 45px;
+}
+
+.main-article {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 91%;
+}
+
+.main-article .content {
+ width: 100%;
+ 
+}
+
+.main-article .image {
+width: 100%;
+padding-bottom: 15px;
+}
+}
+
+@media (min-width: 760px) and (max-width: 1024px) {
+  .navbar li {
+    display: flex;
+    align-items: center;
+    width: 100%;
+  }
+
+  .navbar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .article {
+    width: 40%;
+    margin-bottom: 30px;
+  }
+}
